# swapi-juniper

./: Cargo.toml
src/: data.json  main.rs
